--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "@legendapp/state": "3.0.0-beta.30",
     "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@t3-oss/env-nextjs": "^0.13.4",
     "@vercel/functions": "^2.0.3",
     "better-auth": "^1.2.7",
@@ -30,6 +32,7 @@
     "clsx": "^2.1.1",
     "dexie": "^4.0.11",
     "drizzle-orm": "^0.43.1",
+    "embla-carousel-react": "^8.6.0",
     "esbuild": "^0.25.4",
     "eslint-plugin-react-hooks": "5.2.0",
     "iron-session": "^8.0.4",
@@ -38,9 +41,12 @@
     "pg": "^8.15.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-json-view-lite": "^2.4.1",
+    "react-markdown": "^10.1.0",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
   "devDependencies": {
