--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest --run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@legendapp/state": "3.0.0-beta.30",
@@ -57,6 +59,8 @@
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "@types/uuid": "^10.0.0",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.9",
     "drizzle-kit": "^0.18.1",
     "eslint": "^9.26.0",
     "eslint-config-next": "^15.3.2",
@@ -67,7 +71,11 @@
     "tailwindcss": "^4.1.5",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0"
+    "typescript-eslint": "^8.32.0",
+    "vite": "^6.0.5",
+    "vite-tsconfig-paths": "^5.1.4",
+  "vitest": "^2.1.8",
+  "fast-check": "^3.22.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
